objects/Account.object
<CustomObject>
    <fields>
        <fullName>Fee_Ancillary__c</fullName>
        <description>Fee we charge over and above a booking fee for purchased seats, or any kind of manual process relating to airline reservations.</description>
        <inlineHelpText>Fee we charge over and above a booking fee for purchased seats, or any kind of manual process relating to airline reservations.</inlineHelpText>
        <label>Fee - Ancillary</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_OBT__c</fullName>
        <label>Incumbent - OBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Axiom</fullName>
                </value>
                <value>
                    <fullName>CWT - Horizon</fullName>
                </value>
                <value>
                    <fullName>Deem</fullName>
                </value>
                <value>
                    <fullName>Egencia</fullName>
                </value>
                <value>
                    <fullName>Expedia</fullName>
                </value>
                <value>
                    <fullName>GetThere</fullName>
                </value>
                <value>
                    <fullName>Neo</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Orbitz</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ResX</fullName>
                </value>
                <value>
                    <fullName>SAP Concur</fullName>
                </value>
                <value>
                    <fullName>SAP Concur - Direct Agreement</fullName>
                </value>
                <value>
                    <fullName>Travellink</fullName>
                </value>
                <value>
                    <fullName>Tripactions</fullName>
                </value>
                <value>
                    <fullName>Trip Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_TMC__c</fullName>
        <label>Incumbent TMC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>Abacus</fullName>
                </value>
                <value>
                    <fullName>Abbey Travel</fullName>
                </value>
                <value>
                    <fullName>Able Travel</fullName>
                </value>
                <value>
                    <fullName>Accord</fullName>
                </value>
                <value>
                    <fullName>Account will not disclose</fullName>
                </value>
                <value>
                    <fullName>Action Travel</fullName>
                </value>
                <value>
                    <fullName>Adelman Travel</fullName>
                </value>
                <value>
                    <fullName>ADTRAV</fullName>
                </value>
                <value>
                    <fullName>Advanced Travel</fullName>
                </value>
                <value>
                    <fullName>AJA Stanmore</fullName>
                </value>
                <value>
                    <fullName>Alba Travel</fullName>
                </value>
                <value>
                    <fullName>Alexander Travel</fullName>
                </value>
                <value>
                    <fullName>All About Travel</fullName>
                </value>
                <value>
                    <fullName>All Points Travel</fullName>
                </value>
                <value>
                    <fullName>Allstar Travel Group (ATG)</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>American Express Global Travel</fullName>
                </value>
                <value>
                    <fullName>American Travel Planners</fullName>
                </value>
                <value>
                    <fullName>AMJ Getaways</fullName>
                </value>
                <value>
                    <fullName>AmTrav</fullName>
                </value>
                <value>
                    <fullName>Ancor Travel and Tours</fullName>
                </value>
                <value>
                    <fullName>Anderson Travel</fullName>
                </value>
                <value>
                    <fullName>Angora</fullName>
                </value>
                <value>
                    <fullName>Anthony Travel</fullName>
                </value>
                <value>
                    <fullName>Apollo Travel</fullName>
                </value>
                <value>
                    <fullName>Aquarius</fullName>
                </value>
                <value>
                    <fullName>Aries Travel</fullName>
                </value>
                <value>
                    <fullName>Ascendas</fullName>
                </value>
                <value>
                    <fullName>Associated Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rail_Solution__c</fullName>
        <description>Rail Solution By Country</description>
        <inlineHelpText>FREE FLOW: Please note any rail solutions discussed, by country.</inlineHelpText>
        <label>Rail Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reported_Year__c</fullName>
        <description>Enter the year which represents the travel volumes entered in this section. Note: this is a calendar year!</description>
        <inlineHelpText>Enter the year which represents the travel volumes entered in this section. Note: this is a calendar year!</inlineHelpText>
        <label>Reported Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2019 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2018 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2017 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2016 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2015 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2014 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2013 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2012 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2011 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2010 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2009 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2008 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2008 - Customer&apos;s Fiscal</fullName>
                </value>
                <value>
                    <fullName>2007 - Calendar Year</fullName>
                </value>
                <value>
                    <fullName>2007 - Customer&apos;s Fiscal</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2020 - Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Guarantee__c</fullName>
        <inlineHelpText>Standard: the Standard SLA put in ur RFPs/contract upon request.
Custom: any SLA  that has any single or multiple categories that are outside of our Standard ( i.e. if the telephone response time as contracted at 95/20).</inlineHelpText>
        <label>SLA Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Agent_800__c</fullName>
        <inlineHelpText>Agent 800 Phone Number for VIP Travelers</inlineHelpText>
        <label>VIP Agent 800#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agent_Team_800__c</fullName>
        <inlineHelpText>Enter the toll-free phone number the travelers call to reach their agent team.</inlineHelpText>
        <label>Agent Team 800#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Contract Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desktop_Portal__c</fullName>
        <description>Which desktop portal(s) will the client have?</description>
        <inlineHelpText>Which desktop portal(s) will the client have?</inlineHelpText>
        <label>Desktop Portal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI TravelHub</fullName>
                </value>
                <value>
                    <fullName>Direct Portal (Traveler)</fullName>
                </value>
                <value>
                    <fullName>Travel Manager Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Tracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flight Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMNIA_Contract__c</fullName>
        <description>Checkbox used to indicate if an Omnia Contract is used.</description>
        <inlineHelpText>Checkbox used to indicate if an Omnia Contract is used. Select Yes if Omnia Contract is used, No if it is not</inlineHelpText>
        <label>OMNIA Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Omnia_Force_ID__c</fullName>
        <inlineHelpText>Omnia Partner&apos;s CRM ID Number - will be input as provided.</inlineHelpText>
        <label>OMNIA Force ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Details__c</fullName>
        <description>Area to add account contract and policy detail</description>
        <label>Policy Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VAT_IT_Reclaim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT IT Reclaim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2022_Car_Days__c</fullName>
        <label>2022 # Car Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2024_Car_Days__c</fullName>
        <label>2024 # Car Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZI_Parent_Name__c</fullName>
        <description>for mapping the ZoomInfo Parent Name to the account record</description>
        <label>ZI Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>.</description>
        <inlineHelpText>Select the name of the Account Manager when the Client account was recorded as lost.</inlineHelpText>
        <label>Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Livingston</fullName>
                    <isActive>false</isActive>
                    <label>Aaron Livingston</label>
                </value>
                <value>
                    <fullName>Adam Bath</fullName>
                </value>
                <value>
                    <fullName>Alane Truglia</fullName>
                </value>
                <value>
                    <fullName>Ann Cecco</fullName>
                </value>
                <value>
                    <fullName>Barbara Gooch</fullName>
                </value>
                <value>
                    <fullName>Barbara Muncey</fullName>
                </value>
                <value>
                    <fullName>Betty Fix</fullName>
                </value>
                <value>
                    <fullName>Bob Perry</fullName>
                </value>
                <value>
                    <fullName>Bree Floyd</fullName>
                </value>
                <value>
                    <fullName>Brianna Drysdale</fullName>
                </value>
                <value>
                    <fullName>Carol Chapman</fullName>
                    <isActive>false</isActive>
                    <label>Carol Chapman</label>
                </value>
                <value>
                    <fullName>Carol Martin</fullName>
                </value>
                <value>
                    <fullName>Carol Sinnott</fullName>
                </value>
                <value>
                    <fullName>Cathy Paul</fullName>
                </value>
                <value>
                    <fullName>Cheryl Caron</fullName>
                </value>
                <value>
                    <fullName>Christine Casella</fullName>
                </value>
                <value>
                    <fullName>Christine Ward</fullName>
                </value>
                <value>
                    <fullName>Claudio Gubitosa</fullName>
                </value>
                <value>
                    <fullName>Colleen Hagg</fullName>
                </value>
                <value>
                    <fullName>Connie Wright</fullName>
                </value>
                <value>
                    <fullName>Corinne Scollon</fullName>
                </value>
                <value>
                    <fullName>Crystie Morgan</fullName>
                    <isActive>false</isActive>
                    <label>Crystie Morgan</label>
                </value>
                <value>
                    <fullName>Dave Gries</fullName>
                </value>
                <value>
                    <fullName>David Lee</fullName>
                </value>
                <value>
                    <fullName>David Paterson</fullName>
                </value>
                <value>
                    <fullName>David Underwood</fullName>
                </value>
                <value>
                    <fullName>Debbie Carpenter</fullName>
                </value>
                <value>
                    <fullName>Debbie Chick</fullName>
                </value>
                <value>
                    <fullName>Debbie Parker</fullName>
                    <isActive>false</isActive>
                    <label>Debbie Parker</label>
                </value>
                <value>
                    <fullName>Debbie Pena</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>After_hours_DID__c</fullName>
        <inlineHelpText>Dedicated phone number for travelers to call for agent assistance after-hours...</inlineHelpText>
        <label>After-hours DID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>After_hours_VIP__c</fullName>
        <label>After-hours VIP</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Air_SmBus_Plans__c</fullName>
        <label>Air SmBus Plan(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>8P - Pacific Coastal Airline</fullName>
                </value>
                <value>
                    <fullName>9M - Central Mountain Air</fullName>
                </value>
                <value>
                    <fullName>AAdvantage Business</fullName>
                    <label>AA - AAdvantage Business</label>
                </value>
                <value>
                    <fullName>AC - ACCR</fullName>
                </value>
                <value>
                    <fullName>AC - SMB</fullName>
                </value>
                <value>
                    <fullName>AF/KLM - BlueBiz</fullName>
                </value>
                <value>
                    <fullName>AS - EasyBiz</fullName>
                </value>
                <value>
                    <fullName>B6 - CompanyBlue</fullName>
                </value>
                <value>
                    <fullName>BA - On Business Programme</fullName>
                </value>
                <value>
                    <fullName>Delta-MSA</fullName>
                    <label>DL - MSA</label>
                </value>
                <value>
                    <fullName>DL - SkyMiles for Business</fullName>
                </value>
                <value>
                    <fullName>EK-Emirates</fullName>
                    <label>EK - Emirates</label>
                </value>
                <value>
                    <fullName>EVA Air</fullName>
                </value>
                <value>
                    <fullName>F9 - Best Care</fullName>
                </value>
                <value>
                    <fullName>FL - Airtran A2B</fullName>
                </value>
                <value>
                    <fullName>H3 - Harbour Air</fullName>
                </value>
                <value>
                    <fullName>LH - Perks Plus</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>NX - ANA Business Flyers</fullName>
                </value>
                <value>
                    <fullName>PD - Porter Airlines</fullName>
                </value>
                <value>
                    <fullName>SW - Corporate Rapid Rewards</fullName>
                </value>
                <value>
                    <fullName>SW - Swabiz</fullName>
                </value>
                <value>
                    <fullName>TK - Turkish</fullName>
                </value>
                <value>
                    <fullName>UA - PassPlus</fullName>
                </value>
                <value>
                    <fullName>UA - PerksPlus</fullName>
                </value>
                <value>
                    <fullName>UA - United CPA+</fullName>
                </value>
                <value>
                    <fullName>US - Dividend Miles</fullName>
                </value>
                <value>
                    <fullName>VX - Elevate</fullName>
                </value>
                <value>
                    <fullName>WS -  BTP SME</fullName>
                </value>
                <value>
                    <fullName>WS - Direct Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_Spend_Total__c</fullName>
        <label>Air Spend-Total (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_to_SDR__c</fullName>
        <description>Enter in TODAYs DATE to assign this prospect to DT&apos;s WR and CR Sales Development Representative.</description>
        <label>SDR Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPY_SSO_to_OBT__c</fullName>
        <formula>TEXT(SSO_to_Online_Tool__c)</formula>
        <label>COPY SSO to OBT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defunct_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ZoomInfo mapped field to confirm if a company is no longer in business</description>
        <label>Defunct Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elite_Agent_800__c</fullName>
        <inlineHelpText>Applies only for WR Accounts.</inlineHelpText>
        <label>Elite Agent 800#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fee_After_Hours__c</fullName>
        <label>Fee - After Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Light_Touch__c</fullName>
        <label>Fee - Light-Touch</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Transborder__c</fullName>
        <description>Service Fee for Transborder Travel Canada-US-Canada</description>
        <label>Fee - Transborder</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Spend_YTD__c</fullName>
        <label>Hotel Spend (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_Notes__c</fullName>
        <label>Incumbent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_PT_SF_ID__c</fullName>
        <description>Mapped from Professional Travel&apos;s Professional Edition of SF Classic in 2020</description>
        <inlineHelpText>Mapped from Professional Travel&apos;s Professional Edition of SF Classic in 2020</inlineHelpText>
        <label>Legacy PT SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Tech_Apps__c</fullName>
        <label>Other Tech Apps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lyft for Business</fullName>
                </value>
                <value>
                    <fullName>Uber for Business</fullName>
                </value>
                <value>
                    <fullName>TripIt</fullName>
                </value>
                <value>
                    <fullName>TripIt Pro</fullName>
                </value>
                <value>
                    <fullName>Airport Authority Parking</fullName>
                </value>
                <value>
                    <fullName>Park ’N Fly</fullName>
                </value>
                <value>
                    <fullName>AirBNB</fullName>
                </value>
                <value>
                    <fullName>Booking.com</fullName>
                </value>
                <value>
                    <fullName>HRS</fullName>
                </value>
                <value>
                    <fullName>Dinova</fullName>
                    <isActive>false</isActive>
                    <label>Dinova</label>
                </value>
                <value>
                    <fullName>Road Map</fullName>
                    <isActive>false</isActive>
                    <label>Road Map</label>
                </value>
                <value>
                    <fullName>Service Tech</fullName>
                    <isActive>false</isActive>
                    <label>Service Tech</label>
                </value>
                <value>
                    <fullName>SpotHero</fullName>
                    <isActive>false</isActive>
                    <label>SpotHero</label>
                </value>
                <value>
                    <fullName>The Parking Spot</fullName>
                    <isActive>false</isActive>
                    <label>The Parking Spot</label>
                </value>
                <value>
                    <fullName>Tripkicks</fullName>
                    <isActive>false</isActive>
                    <label>Tripkicks</label>
                </value>
                <value>
                    <fullName>Urbandoor</fullName>
                    <isActive>false</isActive>
                    <label>Urbandoor</label>
                </value>
                <value>
                    <fullName>VAT IT</fullName>
                    <isActive>false</isActive>
                    <label>VAT IT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premier_Sponsor__c</fullName>
        <inlineHelpText>Which Sponsor group does this Premier GPO member fall into?   REQUIRED FIELD</inlineHelpText>
        <label>Premier Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliant Purchasing (KY/TX)</fullName>
                </value>
                <value>
                    <fullName>Avera Health (SD)</fullName>
                </value>
                <value>
                    <fullName>Banner Health (AZ)</fullName>
                </value>
                <value>
                    <fullName>Baton Rogue General (LA)</fullName>
                </value>
                <value>
                    <fullName>Capstone Health Alliance (NC)</fullName>
                </value>
                <value>
                    <fullName>CCPA Purchasing Partners (IL)</fullName>
                </value>
                <value>
                    <fullName>Ceres Select (AR)</fullName>
                </value>
                <value>
                    <fullName>CHAMPS (OH)</fullName>
                </value>
                <value>
                    <fullName>CNECT (CA)</fullName>
                </value>
                <value>
                    <fullName>Dignity Health (AZ)</fullName>
                </value>
                <value>
                    <fullName>Fairview Health Services - Fairview Purchasing Network (MN)</fullName>
                </value>
                <value>
                    <fullName>Fairview Health Services - Healthcare Purchasing Connections (MN)</fullName>
                </value>
                <value>
                    <fullName>Healthcare Procurement Solutions (GA)</fullName>
                </value>
                <value>
                    <fullName>Health Enterprises Cooperative (IA)</fullName>
                </value>
                <value>
                    <fullName>IPC Group Purchasing (IL)</fullName>
                </value>
                <value>
                    <fullName>Kettering Health Network (OH)</fullName>
                </value>
                <value>
                    <fullName>National Capital Area Shared Services (MD)</fullName>
                </value>
                <value>
                    <fullName>OSF Healthcare System (IL)</fullName>
                </value>
                <value>
                    <fullName>Pandion (NY)</fullName>
                </value>
                <value>
                    <fullName>PeaceHealth (WA)</fullName>
                </value>
                <value>
                    <fullName>Prairie Health Ventures (NE)</fullName>
                </value>
                <value>
                    <fullName>Purchasing Connections (KY)</fullName>
                </value>
                <value>
                    <fullName>Sinai Health System (IL)</fullName>
                </value>
                <value>
                    <fullName>Texas Health Resources (TX)</fullName>
                </value>
                <value>
                    <fullName>Vantage Health Group (NY)</fullName>
                </value>
                <value>
                    <fullName>ViaCentric (NC)</fullName>
                </value>
                <value>
                    <fullName>Yankee Alliance (MA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Risk__c</fullName>
        <label>Reason for Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After-hours</fullName>
                </value>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Company is going out of business</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Customer Personnel Changes</fullName>
                </value>
                <value>
                    <fullName>Financial Difficulties</fullName>
                </value>
                <value>
                    <fullName>Non-responsive</fullName>
                </value>
                <value>
                    <fullName>Out to Bid</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Agent_Email__c</fullName>
        <inlineHelpText>Agent Email Address for VIP Travelers</inlineHelpText>
        <label>VIP Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VIP_Agent_Phone__c</fullName>
        <inlineHelpText>Agent Phone Number for VIP Travelers</inlineHelpText>
        <label>VIP Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2022_Car_Spend__c</fullName>
        <label>2022 Car Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2023_Car_Spend__c</fullName>
        <label>2023 Car Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2024_Car_Spend__c</fullName>
        <label>2024 Car Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Name__c</fullName>
        <description>Name of TMC DT acquired</description>
        <label>Acquisition Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Team_Email__c</fullName>
        <inlineHelpText>Enter the email address the travelers call to reach their agent team.</inlineHelpText>
        <label>Agent Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Team_Phone__c</fullName>
        <inlineHelpText>Enter the phone number the travelers call to reach their agent team.</inlineHelpText>
        <label>Agent Team Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Air_Transactions__c</fullName>
        <label># Air Transactions (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Air Credit Card Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AirPlus</fullName>
                </value>
                <value>
                    <fullName>Air Travel Card</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>Diners</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>Starwood AX Card</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>